--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ include("${CMAKE_SOURCE_DIR}/cmake/sites/${SITE}.cmake")
 option(BUILD_SHARED_LIBS "Use shared libraries if ON, static if OFF" ON)
 option(USE_CATALYST "Use Catalyst adaptor" OFF)
 option(USE_BATSRUS "Use BATSRUS flag" OFF)
-option(USE_HDF5 "Use HDF5 library" ON)
+option(USE_HDF5 "Use HDF5 library" OFF)
 option(CUDA_ON "Enable CUDA" ON) # It should always be ON, even for HIP AMD
 option(MOMENT_CUDA_ON "Run Moment on CUDA" ON)
 option(MOVER_CUDA_ON "Run Mover on CUDA" ON)
@@ -74,7 +74,7 @@ if(USE_CATALYST)
       install(TARGETS iPICAdaptor)
     endif()
 
-    target_link_libraries(iPICAdaptor PRIVATE ParaView::PythonCatalyst VTK::CommonDataModel Python3::Python)
+    target_link_libraries(iPICAdaptor PRIVATE stdc++fs ParaView::PythonCatalyst VTK::CommonDataModel Python3::Python)
     target_include_directories(iPICAdaptor INTERFACE ${CMAKE_SOURCE_DIR}/${SOURCE_CODE_DIR}/catalyst)
     target_compile_definitions(iPICAdaptor INTERFACE USE_CATALYST)
 
@@ -173,7 +173,7 @@ elseif(CUDA_ON)
   set_property(TARGET iPIC3Dlib PROPERTY CUDA_ARCHITECTURES 75) # required for double atomicadd
   set_property(TARGET iPIC3Dlib PROPERTY CUDA_STANDARD 17)
   set_property(TARGET iPIC3Dlib PROPERTY INTERPROCEDURAL_OPTIMIZATION FALSE)
-  set_property(TARGET iPIC3Dlib PROPERTY LINK_OPTIONS -fno-lto)
+  # set_property(TARGET iPIC3Dlib PROPERTY LINK_OPTIONS -fno-lto)               #! nvhpc does not recognise -fno-lto
 
   set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo")
 endif()
@@ -196,7 +196,9 @@ target_include_directories(
 #
 # Link external libraries
 #
-set(linkLibraries MPI::MPI_CXX ${HDF5_C_HL_TARGET})
+if (USE_HDF5)
+    set(linkLibraries MPI::MPI_CXX ${HDF5_C_HL_TARGET})
+endif()
 
 if(USE_OPENMP)
     list(APPEND linkLibraries OpenMP::OpenMP_CXX)
@@ -209,6 +211,8 @@ endif()
 target_link_libraries(
     iPIC3Dlib
     PUBLIC ${linkLibraries}
+    PUBLIC MPI::MPI_CXX
+    PRIVATE stdc++fs
 )
 
 
@@ -267,6 +271,7 @@ add_executable(
 target_link_libraries(
   iPIC3D
   iPIC3Dlib
+  stdc++fs
   )
 
 if(NOT CMAKE_BUILD_TYPE)
