Suppressed all warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,6 +322,9 @@ install(TARGETS iPIC3D)
 
 add_subdirectory(share/inputfiles)
 
+### Suppress all warnings
+add_definitions(-w)
+
 message("Which system am I compiling for:")
 message("MYHOSTNAME is ${myhostname}")
 message("CMAKE_SYSTEM_PROCESSOR is ${CMAKE_SYSTEM_PROCESSOR}")
