feat: ADIOS2 particle output
BP5 format output of particle data, with ADIOS2. Some issue with host particle array sync was solved with a hack. Others to be refined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ option(BUILD_SHARED_LIBS "Use shared libraries if ON, static if OFF" ON)
 option(USE_CATALYST "Use Catalyst adaptor" OFF)
 option(USE_BATSRUS "Use BATSRUS flag" OFF)
 option(USE_HDF5 "Use HDF5 library" ON)
+option(USE_ADIOS2 "Use ADIOS2 library" ON)
 
 option(HIP_ON "Use HIP" OFF) # Set it to OFF if you want to use CUDA, ON for HIP
 
@@ -116,6 +117,10 @@ if(USE_OPENMP)
 find_package(OpenMP REQUIRED COMPONENTS CXX)
 endif()
 
+if (USE_ADIOS2)
+  set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/thirdparty/adios2")
+  find_package(ADIOS2 REQUIRED)
+endif()
 
 #
 # Source file list
@@ -206,6 +211,10 @@ if (USE_CATALYST)
     list(APPEND linkLibraries iPICAdaptor)
 endif()
 
+if (USE_ADIOS2)
+    list(APPEND linkLibraries adios2::cxx11_mpi)
+endif()
+
 target_link_libraries(
     iPIC3Dlib
     PUBLIC ${linkLibraries}
@@ -234,6 +243,10 @@ endif()
 
 if(HIP_ON)
 target_compile_definitions(iPIC3Dlib PUBLIC HIPIFLY)
+endif()
+
+if(USE_ADIOS2)
+  target_compile_definitions(iPIC3Dlib PUBLIC USE_ADIOS2)
 endif()
 
 
